# goit-pythonweb-hw-10

./: .env.example  .gitignore  Dockerfile  README.md  cloudinary-example.txt  docker-compose.yml  pyproject.toml  requirements.txt
src/: auth_jwt.py  dependencies.py  limiter.py  main.py  schemas.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: contacts.py  users.py
src/services/: cloudinary_service.py
