[tool.poetry]
name = "fastapi-contacts"
version = "0.1.0"
description = "FastAPI Contacts Management Application"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.104.1"
uvicorn = "0.24.0"
sqlalchemy = "2.0.23"
psycopg2-binary = "2.9.9"
pydantic = "2.5.1"
python-dotenv = "1.0.0"
alembic = "1.12.1"
email-validator = "2.1.0.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
